<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小两口[账本]</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="netErro">网络请求失败</string>

    <string name="register_success">注册成功，自动登陆</string>
    <string name="login_success">登陆成功</string>
    
    <string name="bill_submit">提交</string>
    
    <!--  LoginActivity
    -->
    <string name="login_changetype_txt">滑动按钮可以改变状态</string>
    <string name="login_changetype_pop_txt">如果你还没有注册，请滑动按钮切换到注册状态</string>
    <string name="mail_important">邮箱是登陆账号，是取回密码的唯一凭证，请确保邮箱有效且正确</string>
    <string name="mail_wrong">请输入正确的邮箱</string>
    <string name="mail">邮箱</string>
    <string name="password">密码</string>
    <string name="pass_no_chinese">密码不能有中文</string>
    <string name="pass_more_six">密码应该为大于6位的数字或字母</string>
</resources>
